# prom-seg-clus

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README_gpu_setup.md  README_librispeech.md  analyze_clusters.py  check_gpu.py  create_test_data.py  evaluate_cluster_quality.py  evaluate_clustering.py  evaluate_more_clusters.py  export_cluster_audio_fixed.py  find_loud_clusters.py  install_gpu.py  play_segments.py  prepare_test_data.py  prom_seg_clus.py  pyproject.toml  quick_test_mfcc.py  run_librispeech_pipeline.py  run_librispeech_quick.py  setup_hubert.py  setup_librispeech.py  setup_prominence.py
utils/: data_process.py
wordseg/: cluster.py  subsample.py
