[project]
name = "prom-seg-clus"
version = "0.1.0"
description = "Prominence Segmentation with Clustering for Word Discovery and Lexicon Learning"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "faiss-cpu>=1.7.0",
    "torch>=2.0.0",
    "tqdm>=4.65.0",
    "librosa>=0.11.0",
    "soundfile>=0.13.1",
]

[project.optional-dependencies]
test = [
    "librosa>=0.10.0",
]
